tests/pass/ty1.tiger
let
	type montype = unautretype
in
end
