tests/fail/semantic/dict-multiple-fields-with-same-name.tiger
let
      type vector = {x : int, x : int}
in
end
